--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -88,7 +88,7 @@
 % \newpage
 
 % % % Topics
-\include{topics/schedule.tex}
+% \include{topics/schedule.tex}
 % \newpage
 % \include{topics/overview.tex}
 % \newpage 
@@ -111,12 +111,12 @@
 % \include{topics/PCA.tex}
 % \newpage
 % \include{topics/survival_analysis.tex}
-\newpage 
-\include{topics/optimization.tex}
-\newpage 
-\include{topics/linear_algebra.tex}
+% \newpage 
+% \include{topics/optimization.tex}
+% \newpage 
+% \include{topics/linear_algebra.tex}
 
-% % Solutions
+% % % Solutions
 % \include{solutions/applied_2011.tex}
 % \newpage 
 % \include{solutions/applied_2012.tex}
@@ -134,9 +134,9 @@
 % \include{solutions/applied_2018.tex}
 % \newpage
 % \include{solutions/applied_2019.tex}
-\newpage
-\include{solutions/applied_2020.tex}
-\newpage
+% \newpage
+% \include{solutions/applied_2020.tex}
+% \newpage
 \include{solutions/applied_2021.tex}
 % \newpage
 % \include{solutions/applied_2022.tex}
