--- a/topics/PCA.tex
+++ b/topics/PCA.tex
@@ -1,4 +1,4 @@
-\section{Principal component analysis\footnote{Kenneth Tay, Stephen Bates, Isaac Gibbs, Dan Kluger, M.H.}}
+\section{Principal component analysis\footnote{Kenneth Tay, Stephen Bates, Isaac Gibbs, Dan Kluger, M.H.}}\label{sec pca}
 
 Principal component analysis is a dimension reduction technique and the topic of many qualifying exam questions. We'll talk about four interpretations of PCA.
 
