--- a/topics/linear_model_extra.tex
+++ b/topics/linear_model_extra.tex
@@ -71,7 +71,7 @@ which has $1+I+J+IJ$ parameters but only $IJ$ degrees of freedom. Again it is he
 The fitted values here are $\hat{Y}_{i,j,s} = \bar{Y}_{i,j,+}$ the average value of $Y_{i,j,s'}$ over $s'$. From here you can work out $\hat{\mu},\hat{\alpha},\hat{\beta}$ and $\hat{\gamma}$. Again the F and t-tests can be used to compare groups. 
 
 
-\subsection{Generalized least squares\footnote{Not to be confused with GLMs!}}
+\subsection{Generalized least squares\footnote{Not to be confused with GLMs!}}\label{sec:gls}
 
 In ordinary least squares, we have the linear model,
 \begin{equation}\label{GLS:model}Y = X \beta + \varepsilon, \end{equation}
