fix incorrect conditionals

--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -9,6 +9,7 @@
 \usepackage{enumerate}
 \usepackage{enumitem}
 \usepackage{bm}
+\usepackage{array}
 
 \usepackage{relsize}
 
@@ -82,12 +83,12 @@
 
 \begin{document}
 
-% \maketitle
+\maketitle
 
-% \tableofcontents
-% \newpage
+\tableofcontents
+\newpage
 
-% % % Topics
+% % Topics
 \include{topics/schedule.tex}
 \newpage
 \include{topics/overview.tex}
